2005-07-10  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/srvr_nfs.c (find_nfs_srvr): check to see if the IP address
	of a named but down fserver changed (i.e., the previous IP address
	is no longer responding).  If so, then reset the fserver to the
	new IP address, and set the fserver's flags such that the function
	will fall through to doing the usual NFS version/proto checks and
	pinging.  (This should fix one case of bug #308.)

	* conf/umount/umount_linux.c (umount_fs): warn if plain umount()
	failed, before we try to ignore any errors or try optional
	umount2(), possibly with forced/lazy unmount.
	(umount_fs): dlog when unmount succeeded.

2005-07-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/mount/mount_linux.c: add a couple more NFSv2 error codes
	that are compatible with NFSv3.

2005-07-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/header_templates.m4: extern template for strlcat().

	* amd/get_args.c (get_version_string): use safer strlcat (or
	replacement strlcat).  Use new wrapper xsnprintf() function, which
	will use the safer vsnprintf() if available, else default to plain
	sprintf.

	* configure.in: check for existence of strlcat() and its extern,
	replacing with libamu/strlcat.c as needed.

	* libamu/Makefile.am (EXTRA_DIST): add strlcat.c to distro.

	* include/am_defs.h: optional strlcat() extern.

	* include/am_utils.h: extern for new xvsnprintf().

	* configure.in: overdue new major libtool shlib version.
	Check for snprintf function and extern.

2005-07-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/nfs_prot/nfs_prot_aix4_3.h: cleanup struct
	aix4_nfs_args_bis.

	* Makefile.am (EXTRA_DIST_CONF): include mount_aix3.c in
	distribution.

	* conf/mount/mount_aix.c: mount style for aix 5.x and newer.

	* conf/mount/mount_aix3.c: mount styles for aix 3.x/4.x.

	* m4/macros/check_mount_style.m4: split mount styles for
	aix3.x/4.x and the newer (and better) aix 5.x code.

2005-07-05  Erez Zadok  <ezk@cs.sunysb.edu>
